--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         AEM / Sling JSONLint
                     </h1>
                     <h3>
-                        The JSON Validator
+                        Adobe Experience Manager (AEM) and Apache Sling reserved JSON property remover and JSON Validator
                     </h3>
                 </div>
                 <div class="right span-12 unimportant" style="text-align: right;">
