--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
         <div class="container">
             <div class="banner clear">
-                <div class="left">
+                <div class="left span-12">
                     <h1 id="headerText">
                         AEM / Sling JSONLint
                     </h1>
@@ -39,7 +39,7 @@
                         <a href="http://lab.arc90.com" id="labHint" name="labHint"><img style="margin-right: 9px;" src="c/images/logo_arc90.png"></a>
                     </div>
                     <div>
-                        Based on a Tool from the Arc90 Lab. <a href="http://www.github.com/umbrae/jsonlintdotcom" id="sourceLink" name="sourceLink">Source is on GitHub.</a><br>
+                        Based on a Tool from the Arc90 Lab. <a href="http://www.github.com/odu/slingjsonlint" id="sourceLink" name="sourceLink">Source is on GitHub</a> along with <a href="http://www.github.com/umbrae/jsonlintdotcom" id="sourceLink" name="sourceLink">the original.</a><br>
                         Props to <a href="http://www.crockford.com/">Douglas Crockford</a> of <a href="http://www.json.org">JSON</a> and <a href="http://www.jslint.com">JS Lint</a> and <br /><a href="http://zaa.ch/">Zach Carter</a>, who provided the <a href="https://github.com/zaach/jsonlint">pure JS implementation of jsonlint</a>.
                     </div>
                 </div>
